emmett/test/bad/asgn-mismatch.emt
Probe { 
   foo = "string";
   foo = 1;
}
